welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:9: error: type mismatch;
 found   : Boolean(true)
 required: Int
  return true
         ^